--- a/extensions/fakeadfs_extension/package.json
+++ b/extensions/fakeadfs_extension/package.json
@@ -10,11 +10,27 @@
     "node": "0.11.12"
   },
   "dependencies": {
+    "crypto": "0.0.3",
+    "ejs": "^2.5.6",
     "f5-nodejs": "0.0.3",
     "fs": "0.0.2",
     "https": "^1.0.0",
-    "moment": "^2.17.1",
+    "jsonwebtoken": "^7.3.0",
+    "moment": "^2.18.1",
     "querystring": "^0.2.0",
-    "saml": "^0.10.2"
-  }
+    "saml": "^0.10.2",
+    "thumbprint": "0.0.1",
+    "xml-crypto": "^0.9.0",
+    "xml-encryption": "^0.10.0",
+    "xmldom": "^0.1.27"
+  },
+  "name": "fakeadfs_extension",
+  "version": "0.1.1",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Michael Coleman <stumpj@gmail.com>",
+  "license": "ISC"
 }
